# turban-toolbox

./: .gitignore  .readthedocs.yaml  README.md  environment-dev.yml  environment-versions.yml  environment.yml  environment_detailed.yml  mkdocs.yml  numpy_benchmark.ipynb  probeconf_mss053_2024.json  pyproject.toml  pytest.ini  setup.py  test.py
.github/: copilot-instructions.md
.github/workflows/: pr-hygiene.yml  tests.yml
doc/: manual.md
docs/: api.md  benchmark_files.md  devguide.md  index.md  manual.md  microrider.md  mss.md  quickstart.md
docs/instruments/mss/: config.md  mss_hhl.md  mss_index.md  mss_mrd.md
test/mss/: Nien0020.MRD
tests/: filepaths.py  fixtures.py  mss.py  test_config.py  test_util.py
tests/RocklandScientific/: test_config_parser.py  test_conversions.py  test_rsIO.py
tests/instruments/microrider/: test_config_parser.py  test_config_parser.py~  test_conversions.py  test_rsIO.py  test_speed_plugins.py
tests/instruments/mss/: test_mss.py  test_read_mrd.py
tests/process/: test_config.py
tests/process/shear/: test_adhoc.py  test_atomix_baltic_nc.py  test_atomix_faroe_nc.py  test_level2.py  test_level3.py  test_level4.py  test_plot.py  test_process.py  test_shear_util.py
tests/process/utemp/: test_level3.py  test_utemp.py  test_utemp_level3.py
tests/shear/: test_atomix_baltic_nc.py  test_config.py  test_level2.py  test_level3.py  test_level4.py  test_process.py
tests/temperature/: test_temperature.py
tests/utils/: test_filepaths.py  test_logging.py  test_spectra.py  test_util.py
turban/: __init__.py  _process.py  api.py  config.py  ctd.py  level1.py  level2.py  level3.py  level4.py  mss.py  process.py  temperature.py  temperature_jit.py  test_config.py  test_level2.py  test_level3.py  test_level4.py  test_mss.py  test_process.py  test_util.py  turban.py  util.py  variables.py
turban/instruments/: __init__.py  instrument.py  mss.py  test_mss.py
turban/instruments/RocklandScientific/: __init__.py  rsCommon.py  rsConfig_parser.py  rsConversions.py  rsIO.py
turban/instruments/generic/: api.py  config.py
turban/instruments/microrider/: __init__.py  api.py  rsCommon.py  rsConfig_parser.py  rsConversions.py  rsIO.py  sensorspeedplugins.py
turban/instruments/mss/: __init__.py  api.py  config.py  mss.py  mss.rs  mss_hhl.py  mss_mrd.py  mss_probe_conf.py  mss_utils.py  test_mss.py  variables.py
turban/process/generic/: api.py  config.py
turban/process/shear/: api.py  config.py  level2.py  level3.py  level4.py  util.py
turban/process/temperature/: __init__.py  api.py  config.py  level2.py  level3.py  level4.py  temperature.py  temperature_jit.py
turban/process/utemp/: api.py  config.py  level2.py  level3.py  level4.py  temperature.py
turban/shear/: __init__.py  config.py  level1.py  level2.py  level3.py  level4.py  process.py  test_level3.py  test_level4.py  test_process.py
turban/temperature/: __init__.py  config.py  temperature.py
turban/utils/: cli.py  ctd.py  filepaths.py  logging.py  plot.py  spectra.py  util.py
turban/utils/plot/: generic.py  shear.py
utils/: level2.rs  mss_probe_conf.py  plot.py
