[project]
name = "turban-toolbox"
version = "0.0.2"
description = "Turbulence Analysis Toolbox"
authors = [
  { name = "Achim Randelhoff", email = "ara@akvaplan.niva.no" },
  { name = "Peter Holtermann", email = "peter.holtermann@io-warnemuende.de" },
]
license = { text = "GPLv03" }
dependencies = [
  "arrow>=1.4.0",
  'beartype',
  "dateparser",
  'gsw',
  'jaxtyping',
  'matplotlib',
  'netCDF4',
  'numba',
  'numpy',
  'pandas',
  'pydantic',
  'requests',
  'scipy',
  'setuptools',
  'xarray',
]

requires-python = ">=3.9"
readme = "README.md"
classifiers = [
  'Development Status :: 4 - Beta',
  'Topic :: Scientific/Engineering',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
]

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov"]
mss = ["pytz", "dateparser"]

[project.scripts]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
filterwarnings = "always::UserWarning"
#addopts = "--pdb"
log_cli = false
log_cli_level = "DEBUG"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.ipynb_checkpoints
    | \.pytest_cache
    | __pycache__
  )/
)

'''

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipython>=8.18.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
]


[tool.mypy]
python_version = "3.13"
strict = true  # Enable all checks
disallow_untyped_calls = true


