[project]
name = "turban-toolbox"
version = "0.1.0"
description = "Turbulence Analysis Toolbox"
authors = [
  { name = "Achim Randelhoff", email = "ara@akvaplan.niva.no" },
  { name = "Peter Holtermann", email = "peter.holtermann@io-warnemuende.de" },
  { name = "Lucas Merckelbach", email = "lucas.merckelbach@hereon.de" },  
]
license = { text = "GPLv03" }
dependencies = [
  'beartype>=0.16',
  'gsw',
  'jaxtyping>=0.2.20',
  'matplotlib>=3.6',
  'netCDF4>=1.6',
  'numba>=0.57',
  'numpy>=2.0',
  'pandas>=1.5',
  'pydantic>=2.0',
  'requests',
  'scipy>=1.10',
  'setuptools>=65',
  'xarray>=2022.11',
]

requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  'Development Status :: 4 - Beta',
  'Topic :: Scientific/Engineering',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipython>=8.18.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov",
    "mkdocs",
    "pytest-markdown-docs",
    "pymdown-extensions",
    "mkdocstrings[python]",
]
mss = ["pytz", "dateparser"]
microrider = ["arrow>=1.4.0"]

[project.scripts]
turban_download_datafiles="turban.utils.cli:download_datafiles"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
filterwarnings = "always::UserWarning"
addopts = "--markdown-docs --markdown-docs-syntax=superfences"
log_cli = false
log_cli_level = "WARNING"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.ipynb_checkpoints
    | \.pytest_cache
    | __pycache__
  )/
)

'''
[tool.mypy]
python_version = "3.13"
strict = true  # Enable all checks
disallow_untyped_calls = true


